--- a/said_yes.html
+++ b/said_yes.html
@@ -34,7 +34,7 @@
   }
 
   #bg {
-    background-image: url("bg_2.jpg");
+    background-image: url("bg_2.JPG");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100vw;
